# RunpodOllama

./: .gitignore  LICENSE  README.md  pyproject.toml  runpod_serverless_llm.py  runpod_wrapper.py  test_input.json
examples/: litellm_llava.py  litellm_mixtral.py  openai_llava.py  pull_model.py
runpod_ollama/: __init__.py  cli.py  config.py  local_proxy.py  runpod_repository.py  utils.py
runpod_ollama/litellm/: config.yaml
runpod_ollama/runpod/: __init__.py  ollama_runpod_proxy.py  runpod_repository.py
scripts/: start-proxy.sh
server/: Dockerfile  REDME.md  runpod_wrapper.py  start.sh  test_input.json
