[tool.poetry]
name = "runpod"
version = "0.0.1"
description = ""
authors = ["Pooya Haratian"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/pooyahrtn/RunpodOllama"
repository = "https://github.com/pooyahrtn/RunpodOllama"
documentation = "https://github.com/pooyahrtn/RunpodOllama"
packages = [{ include = "runpod_ollama" }]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
litellm = "^1.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
